--- a/doit_pandas/notebook/02_practice.ipynb
+++ b/doit_pandas/notebook/02_practice.ipynb
@@ -9,10 +9,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('/Users/shinjiyoung/GitHub/DataScienceStudy/doit_pandas/data/gapminder.tsv', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       country continent  year  lifeExp       pop   gdpPercap\n",
+      "0  Afghanistan      Asia  1952   28.801   8425333  779.445314\n",
+      "1  Afghanistan      Asia  1957   30.332   9240934  820.853030\n",
+      "2  Afghanistan      Asia  1962   31.997  10267083  853.100710\n",
+      "3  Afghanistan      Asia  1967   34.020  11537966  836.197138\n",
+      "4  Afghanistan      Asia  1972   36.088  13079460  739.981106\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.head())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -23,10 +56,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "(1704, 6)\n",
+      "Index(['country', 'continent', 'year', 'lifeExp', 'pop', 'gdpPercap'], dtype='object')\n",
+      "country       object\n",
+      "continent     object\n",
+      "year           int64\n",
+      "lifeExp      float64\n",
+      "pop            int64\n",
+      "gdpPercap    float64\n",
+      "dtype: object\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1704 entries, 0 to 1703\n",
+      "Data columns (total 6 columns):\n",
+      "country      1704 non-null object\n",
+      "continent    1704 non-null object\n",
+      "year         1704 non-null int64\n",
+      "lifeExp      1704 non-null float64\n",
+      "pop          1704 non-null int64\n",
+      "gdpPercap    1704 non-null float64\n",
+      "dtypes: float64(2), int64(2), object(2)\n",
+      "memory usage: 80.0+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(df))\n",
+    "print(df.shape)\n",
+    "print(df.columns)\n",
+    "print(df.dtypes)\n",
+    "print(df.info())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -37,10 +105,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "country_df = df['country']\n",
+    "print(type(country_df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    Afghanistan\n",
+      "1    Afghanistan\n",
+      "2    Afghanistan\n",
+      "3    Afghanistan\n",
+      "4    Afghanistan\n",
+      "Name: country, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(country_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1699    Zimbabwe\n",
+      "1700    Zimbabwe\n",
+      "1701    Zimbabwe\n",
+      "1702    Zimbabwe\n",
+      "1703    Zimbabwe\n",
+      "Name: country, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(country_df.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "subset = df[['country', 'continent', 'year']]\n",
+    "print(type(subset))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       country continent  year\n",
+      "0  Afghanistan      Asia  1952\n",
+      "1  Afghanistan      Asia  1957\n",
+      "2  Afghanistan      Asia  1962\n",
+      "3  Afghanistan      Asia  1967\n",
+      "4  Afghanistan      Asia  1972\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(subset.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       country continent  year\n",
+      "1699  Zimbabwe    Africa  1987\n",
+      "1700  Zimbabwe    Africa  1992\n",
+      "1701  Zimbabwe    Africa  1997\n",
+      "1702  Zimbabwe    Africa  2002\n",
+      "1703  Zimbabwe    Africa  2007\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(subset.tail())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,10 +236,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "country      Afghanistan\n",
+      "continent           Asia\n",
+      "year                1952\n",
+      "lifeExp           28.801\n",
+      "pop              8425333\n",
+      "gdpPercap        779.445\n",
+      "Name: 0, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.loc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "country      Zimbabwe\n",
+      "continent      Africa\n",
+      "year             2007\n",
+      "lifeExp        43.487\n",
+      "pop          12311143\n",
+      "gdpPercap     469.709\n",
+      "Name: 1703, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_of_rows = df.shape[0]\n",
+    "print(df.loc[number_of_rows-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       country continent  year  lifeExp       pop   gdpPercap\n",
+      "1703  Zimbabwe    Africa  2007   43.487  12311143  469.709298\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.tail(n=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         country continent  year  lifeExp       pop    gdpPercap\n",
+      "0    Afghanistan      Asia  1952   28.801   8425333   779.445314\n",
+      "99    Bangladesh      Asia  1967   43.453  62821884   721.186086\n",
+      "999     Mongolia      Asia  1967   51.253   1149500  1226.041130\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.loc[[0,99,999]])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,16 +342,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "country      Afghanistan\n",
+      "continent           Asia\n",
+      "year                1952\n",
+      "lifeExp           28.801\n",
+      "pop              8425333\n",
+      "gdpPercap        779.445\n",
+      "Name: 0, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "country      Bangladesh\n",
+      "continent          Asia\n",
+      "year               1967\n",
+      "lifeExp          43.453\n",
+      "pop            62821884\n",
+      "gdpPercap       721.186\n",
+      "Name: 99, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[99])"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# 파이썬 슬라이싱 구문을 조합하여 원하는 데이터 추출하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   year       pop\n",
+      "0  1952   8425333\n",
+      "1  1957   9240934\n",
+      "2  1962  10267083\n",
+      "3  1967  11537966\n",
+      "4  1972  13079460\n"
+     ]
+    }
+   ],
+   "source": [
+    "subset = df.loc[:, ['year', 'pop']]\n",
+    "print(subset.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   year       pop   gdpPercap\n",
+      "0  1952   8425333  779.445314\n",
+      "1  1957   9240934  820.853030\n",
+      "2  1962  10267083  853.100710\n",
+      "3  1967  11537966  836.197138\n",
+      "4  1972  13079460  739.981106\n"
+     ]
+    }
+   ],
+   "source": [
+    "subset = df.iloc[:, [2, 4, -1]]\n",
+    "print(subset.head())"
    ]
   },
   {
@@ -199,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
