--- a/doit_pandas/notebook/hello_jupyter_notebook.ipynb
+++ b/doit_pandas/notebook/hello_jupyter_notebook.ipynb
@@ -5,7 +5,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas"
+   ]
   }
  ],
  "metadata": {
@@ -24,7 +26,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
