--- a/doit_pandas/notebook/03_practice.ipynb
+++ b/doit_pandas/notebook/03_practice.ipynb
@@ -9,10 +9,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    banana\n",
+      "1        42\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "s = pd.Series(['banana', 42])\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0         Wes McKinney\n",
+      "1    Creator of Pandas\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = pd.Series(['Wes McKinney', 'Creator of Pandas'])\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Person         Wes McKinney\n",
+      "Who       Creator of Pandas\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = pd.Series(['Wes McKinney', 'Creator of Pandas'], index=['Person', 'Who'])\n",
+    "print(s)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -23,10 +77,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                Name    Occupation        Born        Died  Age\n",
+      "0  Rosaline Franklin       Chemist  1920-07-25  1958-04-16   37\n",
+      "1     William Gosset  Statistician  1876-06-13  1937-10-16   61\n"
+     ]
+    }
+   ],
+   "source": [
+    "scientists = pd.DataFrame({\n",
+    "    'Name' : ['Rosaline Franklin', 'William Gosset'],\n",
+    "    'Occupation' : ['Chemist', 'Statistician'],\n",
+    "    'Born' : ['1920-07-25', '1876-06-13'],\n",
+    "    'Died' : ['1958-04-16', '1937-10-16'],\n",
+    "    'Age' : [37, 61]}\n",
+    ")\n",
+    "print(scientists)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                Name    Occupation        Born  Age  \\\n",
+      "Rosaline Franklin  Rosaline Franklin       Chemist  1920-07-25   37   \n",
+      "William Gosset        William Gosset  Statistician  1876-06-13   61   \n",
+      "\n",
+      "                         Died  \n",
+      "Rosaline Franklin  1958-04-16  \n",
+      "William Gosset     1937-10-16  \n"
+     ]
+    }
+   ],
+   "source": [
+    "scientists = pd.DataFrame({\n",
+    "    'Name' : ['Rosaline Franklin', 'William Gosset'],\n",
+    "    'Occupation' : ['Chemist', 'Statistician'],\n",
+    "    'Born' : ['1920-07-25', '1876-06-13'],\n",
+    "    'Died' : ['1958-04-16', '1937-10-16'],\n",
+    "    'Age' : [37, 61]},\n",
+    "    index = ['Rosaline Franklin', 'William Gosset'],\n",
+    "    columns = ['Name', 'Occupation', 'Born', 'Age', 'Died']\n",
+    ")\n",
+    "print(scientists)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -37,10 +142,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "Name          William Gosset\n",
+      "Occupation      Statistician\n",
+      "Born              1876-06-13\n",
+      "Age                       61\n",
+      "Died              1937-10-16\n",
+      "Name: William Gosset, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_row = scientists.loc['William Gosset']\n",
+    "print(type(first_row))\n",
+    "print(first_row)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
